unpackaged/main/default/objects/fferpcore__TaxCode__c/fferpcore__TaxCode__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__TaxCodeHelp</customHelpPage>
    <label>Tax Code</label>
    <nameField>
        <label>Tax Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>