unpackaged/main/default/objects/fferpcore__TaxCode__c/fields/fferpcore__Description__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>