unpackaged/main/default/objects/fferpcore__TaxCode__c/fields/FFX_Analysis01__c.field-meta.xml
<CustomField>
    <fullName>FFX_Analysis01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension/Analysis 01</label>
    <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
    <relationshipLabel>Tax Codes (ERP)</relationshipLabel>
    <relationshipName>TXERP_AC1</relationshipName>
    <type>Lookup</type>
</CustomField>