unpackaged/main/default/objects/fferpcore__TaxCode__c/fields/FFX_Analysis02__c.field-meta.xml
<CustomField>
    <fullName>FFX_Analysis02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension/Analysis 02</label>
    <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
    <relationshipLabel>Tax Codes (ERP) (Dimension/Analysis 02)</relationshipLabel>
    <relationshipName>TCERP_AC2</relationshipName>
    <type>Lookup</type>
</CustomField>