unpackaged/main/default/objects/fferpcore__TaxCode__c/fields/FFX_Analysis03__c.field-meta.xml
<CustomField>
    <fullName>FFX_Analysis03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension/Analysis 03</label>
    <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
    <relationshipLabel>Tax Codes (ERP) (Dimension/Analysis 03)</relationshipLabel>
    <relationshipName>TCERP_AC3</relationshipName>
    <type>Lookup</type>
</CustomField>