unpackaged/main/default/objects/fferpcore__TaxCode__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>